--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -69,7 +69,7 @@
         <input type="file" id="permit-image-filename" name="permit-image-filename" class="input-image-upload" (change)="onPermitImageFilenameChange($event)" accept="image/*">
         <label for="permit-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.permit.upload.button' | translate}}</label>
         <p>{{'user.profile.form.permit.upload.description' | translate}}</p>
-        <div *ngIf="profileForm.value.permit_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + profileForm.value.permit_image.imageUrl + ')'}"></div>
+        <div *ngIf="user.permitImage" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.permitImage.imageUrl + ')'}"></div>
         <div *ngIf="permitImgeSaveSuccess" class="save-message">{{'user.profile.form.permit.upload.success' | translate}}</div>
         <div *ngIf="permitImageSaveFail" class="error-message">{{'user.profile.form.permit.upload.fail' | translate}}</div>
       </div>
