frontend user skill support

--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -91,7 +91,32 @@
 
       <div class="profile-input-container">
         <label>{{'user.profile.form.skills.label' | translate}}:</label>
-        <textarea class="form-control material-input" name="skills" id="skills" class="form-control material-input" (focus)="serverValidationErrors.competence_text = ''" autosize type="text" placeholder="{{'user.profile.form.skills.placeholder' | translate}}" [formControl]="profileForm.controls['competence_text']"></textarea>
+        <autocomplete-dropdown (dropdownListItemSelect)="onSkillSelect($event)" [clearDestinationAfterSelection]="true" [placeholder]="'user.profile.form.skills.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel"
+            [getData]="getSkills()">
+        </autocomplete-dropdown>
+
+        <div class="profile-input-languages-table-container">
+          <div class="profile-input-languages-table-row-container" *ngFor="let userSkill of profileForm.value.user_skills">
+            <div class="profile-input-languages-table-row-inner-container">
+              <div class="profile-input-languages-table-row-inner-language-container">
+                <p>{{userSkill.skill.name}}</p>
+              </div>
+              <div class="profile-input-languages-table-row-inner-icon-container" (click)="onRemoveUserSkill(userSkill)">
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
+              <div class="profile-input-languages-table-row-inner-dropdown-container">
+                <autocomplete-dropdown [lookupType]="'list'" [enumList]="skillProficiencyLevelsAvailable" [(destination)]="userSkill.proficiency" [placeholder]="'skill.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel"
+                    [selectedItemLabelFunction]="namePropertyLabel">
+                </autocomplete-dropdown>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-input-container">
+        <label>{{'user.profile.form.general.skills.label' | translate}}:</label>
+        <textarea class="form-control material-input" name="general-skills" id="general-skills" class="form-control material-input" (focus)="serverValidationErrors.competence_text = ''" autosize type="text" placeholder="{{'user.profile.form.general.skills.placeholder' | translate}}" [formControl]="profileForm.controls['competence_text']"></textarea>
         <div *ngIf="serverValidationErrors.competence_text" class="alert alert-danger">{{serverValidationErrors.competence_text}}.</div>
       </div>
 
