--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -40,11 +40,14 @@
           > p {
             display: table-cell;
             vertical-align: middle;
+            font-size: 14px;
+            opacity: 0.7;
+            padding-left: 3px;
           }
         }
 
         .profile-input-table-row-inner-dropdown-container {
-          width: 300px;
+          width: 250px;
           margin-left: auto;
         }
 
