--- a/src/styles.scss
+++ b/src/styles.scss
@@ -301,3 +301,13 @@ body > .app-container {
     width: 100%;
   }
 }
+
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
