mobile input padding adjustments

--- a/src/app/views/forgot-password/forgot-password.component.scss
+++ b/src/app/views/forgot-password/forgot-password.component.scss
@@ -17,6 +17,8 @@
   padding-top: 50px;
   max-width: 500px;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 
   .forgot-password-input-container {
 
