--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -18,6 +18,8 @@
     padding-top: 50px;
     max-width: 500px;
     margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
 
     .login-input-container {
 
