--- a/src/app/views/user/user-settings/user-details/user-details.component.scss
+++ b/src/app/views/user/user-settings/user-details/user-details.component.scss
@@ -5,6 +5,8 @@
   padding-top: 50px;
   max-width: 500px;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 
   .input-group-header {
     color: black;
