--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -5,6 +5,8 @@
   padding-top: 50px;
   max-width: 500px;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 
   .profile-input-container {
     padding-bottom: 1.5em;
