loading gif replaced with animated icon

--- a/src/app/components/loading-gif/loading-gif.component.scss
+++ b/src/app/components/loading-gif/loading-gif.component.scss
@@ -1,6 +1,4 @@
 .loading {
     margin: 0 auto;
-    background: url('../../../assets/images/loading-gif.gif') no-repeat center center;
-    width: 100px;
-    height: 100px;
+    text-align: center;
 }
