--- a/src/app/components/pager/pager.component.scss
+++ b/src/app/components/pager/pager.component.scss
@@ -27,8 +27,9 @@
 }
 
 .pagination-text {
-  text-align: left;
-  white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pagination-button {
