--- a/src/app/components/job-state-status-bar/job-state-status-bar.component.html
+++ b/src/app/components/job-state-status-bar/job-state-status-bar.component.html
@@ -7,19 +7,23 @@
     </div>
     <div class="row">
       <div class="col-xs-5 job-status-icon-container">
-        <div class="job-status-icon-background">
-          <img [src]="job.companyLogoURL" class="company-logo">
-        </div>
+        <img [src]="job.companyLogoURL" class="company-logo">
       </div>
       <div class="col-xs-7">
         <h4 class="job-status-text">{{job.company.name}}</h4>
         <h6 class="job-status-text">{{job.jobDate | date: 'MMM dd'}} - {{job.jobEndDate | date: 'MMM dd'}}</h6>
         <h6 class="job-status-text">{{job.street}}</h6>
-        <h2 class="job-status-text">{{job.grossSalary}} {{job.currency}}</h2>
+        <h2 class="job-status-salary-text">{{job.grossSalary}} {{job.currency}}</h2>
       </div>
     </div>
   </div>
   <div class="btn-secondary-light btn-medium btn" *ngIf="!userJob" (click)="onApplyForJobButtonClick()">{{'assignment.status.apply' | translate}}</div>
+  <div class="expand-details-text-container">
+    <h6 class="expand-details-text">{{'assignment.status.more_details' | translate}}</h6>
+    <div class="expand-link-container">
+      <h6 class="expand-details-link">{{'assignment.status.click_here' | translate}}</h6>
+    </div>
+  </div>
   <span *ngIf="userJob && !userJob.accepted">{{'assignment.status.applied' | translate}}</span>
   <div class="table" *ngIf="userJob && userJob.accepted && !userJob.willPerform">
     <div class="table-row">
